# MCP-gateway

./: LICENSE  README.md  post_migration_and_analysis_report.md
code/data/: step1_create_file.ckpt  step2_simulate_crash.ckpt  step3_final.ckpt  step4_system_info.ckpt  system_info.txt
docs/: agentgateway.txt  hackmd.io
implementation_code/phase1/langgraph_bridge/: adapter.py  graph.py
implementation_code/phase1/mcp-gateway/: .gitignore  README.md  pyproject.toml
implementation_code/phase1/mcp-gateway/mcp_gateway/: audit.py  parser.py  resilience.py  router.py  server.py  trust.py  validation.py
implementation_code/phase1/mcp-gateway/mcp_gateway/schemas/: echo.json  github.json  telegram.json
implementation_code/phase1/mcp-gateway/tests/: test_parser.py  test_router.py  test_validation.py
project_state/: ARCHITECTURE_INDEX.md  CRITICAL_PATH.md  CURRENT_STATE.md  NEXT_ACTIONS.md  ROADMAP.md
