[tool.poetry]\nname = "mcp-gateway"\nversion = "0.1.0"\ndescription = "Core MCP Gateway component"\nauthors = ["Fedora AI OS Team"]\nreadme = "README.md"\n\n[tool.poetry.dependencies]\npython = "^3.11"\nmcp = {version = "~0.1.0", python-managed = true} # Placeholder for actual mcp SDK version\nhttpx = {version = "^0.27.0", python-managed = true}\n\n[tool.poetry.group.dev.dependencies]\npytest = {version = "^7.4.0", python-managed = true}\n
